--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
 div {
     position: absolute;
     bottom: 30px;
-    background: rgb(255, 126, 126);;
+    background: rgb(255, 126, 126);
     font-size: 20px;
     padding: 10px 15px;
 }
